# ProjectThopaSichai

./: README.md  allcodes.docx
EspCodes/: Actuator.py  Gateway.py  Kullo1.py  (+1 more)
ThopaSichai_backend/: .gitignore  API_DOCUMENTATION.md  API_DOCUMENTATION_V2.md  BACKEND_COMPLETE_GUIDE.md  CODE_REVIEW_AND_IMPROVEMENTS.md  ENDPOINT_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  MOTOR_CONTROL_API.md  NODEID_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  SENSOR_ARCHITECTURE_COMPLETE.md  SERIALIZER_IMPROVEMENTS.md  SOIL_MOISTURE_API.md  THRESHOLD_CHANGES.md  check_users.py  dev.sh  esp32_example.py  final_test.py  manage.py  pyproject.toml  requirements.txt  setup_motors.py  test_all_endpoints.sh  test_api_threshold.py  test_motor_endpoint.py  test_new_features.py  test_nodeid_architecture.py  test_sensor_architecture.py  test_threshold_logic.py  view_db.py
ThopaSichai_backend/.github/: copilot-instructions.md
ThopaSichai_backend/ThopaSichai_backend/: asgi.py  settings.py  urls.py  wsgi.py
ThopaSichai_backend/accounts/: serializers.py  urls.py  views.py
ThopaSichai_backend/soil_moisture/: admin.py  apps.py  models.py  motor_logic.py  serializers.py  urls.py  views.py
ThopaSichai_backend/soil_moisture/migrations/: 0001_initial.py  0002_remove_thresholdconfig_high_threshold_and_more.py
ThopaSichai_backend/test/: x.py
drip-irrigation-main/micropy/: .gitignore  README.md  pyproject.toml
drip-irrigation-main/micropy/examples/: example_webserver.py
drip-irrigation-main/micropy/micropy/: __init__.py  scripts.py
drip-irrigation-main/micropy/src/: config.py  main.py
(+65 files in other folders)
